# sec-insight-rag

./: .gitignore  README.md  agents.md  discussion.txt  main.py  plan1.txt  plan2.txt  plan2_5.txt  plan3.txt  proposal.md  pyproject.toml  to_do.md  to_do.txt
data/fixtures/: sec_company_tickers.json  sec_companyfacts_sample.json  sec_submissions_sample.json
docs/: experiments.md  structure.md
experiments/MS1/: experiment_proposal.md
experiments/MS2/: experiment_proposal.md  milestone2_ingestion_showcase.py
experiments/MS2_5/: experiment_proposal.md  milestone25_live_sec_inspection.py
experiments/MS3/: experiment_proposal.md
experiments/MS4/: experiment_proposal.md
experiments/MS5/: experiment_proposal.md
experiments/MS6/: experiment_proposal.md
experiments/MS7/: experiment_proposal.md
my ideas/: inspection schema.txt
src/: __init__.py
src/analytics/: __init__.py
src/analyze/: __init__.py  prompts.py
src/api/: main.py
src/config/: __init__.py  settings.py
src/evaluation/: __init__.py
src/indicators/: __init__.py
src/ingestion/: __init__.py  company.py  companyfacts.py  errors.py  filings.py  sec_client.py  (+3 more)
tests/: test_base_metrics.py  test_company_deletion.py  test_company_ingestion.py  test_companyfacts.py  test_facts_repository.py  test_filings.py  test_health.py  test_main.py  test_milestone25_experiment.py  test_milestone2_experiment.py  test_plan25_repositories.py  test_refresh_policy.py  test_sec_client.py  test_settings.py  test_submissions.py  test_tickers.py  test_xbrl_normalizer.py  test_xbrl_periods.py  test_xbrl_quality.py
(+34 files in other folders)
